--- a/src/app/components/stack/stack.component.html
+++ b/src/app/components/stack/stack.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1 class="title">Tecnologias</h1>
-    <p class="sub-title">Qualificando minhas habilidades de 0 a 5 em determinadas tecnologias.</p>
+    <p class="sub-title">As tecnologias que mais utilizo e nas quais possuo sólidos conhecimentos para desenvolvimento.</p>
     <div class="stacks">
         @for (stack of stacks; track stack) {
         <div class="stack-container">
