--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,8 @@
+<app-header 
+    [user]="user"
+    [tags]="tags"
+    [midias]="midias"
+    ></app-header>
 <div class="content">
     <app-break-line></app-break-line>
     <app-about></app-about>
@@ -7,4 +12,4 @@
     <app-stack></app-stack>
     <app-break-line></app-break-line>
 </div>
-<app-footer [midia]="midia"></app-footer>
+<app-footer [midia]="midias"></app-footer>
